--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.6.0",
+    "eslint-plugin-vue": "^8.3.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.13",
     "typescript": "^4.4.4",
