--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "vue": "^3.2.25"
+    "axios": "0.24.0",
+    "vue": "3.2.25"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "@vitejs/plugin-vue": "^2.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.6.0",
-    "eslint-plugin-vue": "^8.3.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vite-plugin-eslint": "^1.3.0",
-    "vue-tsc": "^0.29.8"
+    "@typescript-eslint/eslint-plugin": "5.9.1",
+    "@typescript-eslint/parser": "5.9.1",
+    "@vitejs/plugin-vue": "2.0.0",
+    "@vue/eslint-config-typescript": "10.0.0",
+    "autoprefixer": "10.4.2",
+    "eslint": "8.6.0",
+    "eslint-plugin-vue": "8.3.0",
+    "postcss": "8.4.5",
+    "tailwindcss": "3.0.13",
+    "typescript": "4.4.4",
+    "vite": "2.7.2",
+    "vite-plugin-eslint": "1.3.0",
+    "vue-tsc": "0.29.8"
   }
 }
